Position absolute, relative and sticky

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
             <section class="section conceptos">
               <h2>Conceptos esenciales del Desarrollo Web</h2>
-              <h3>Qué es HTML</h3>
+              <h3 id="html">Qué es HTML</h3>
               <p>
                 Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es
                 el componente más básico de la web. Define el significado y la
@@ -146,7 +146,7 @@
 &lt;/html&gt;
 </pre
               >
-              <h3>Etiquetas</h3>
+              <h3 id="etiquetas">Etiquetas</h3>
               <p>
                 Las etiquetas HTML van a ayudarnos a brindar una estructura y
                 semántica al contenido de nuestro website y cada una tiene
@@ -161,7 +161,7 @@
                 uso pero en este curso vamos a usar las más importantes y que
                 serán parte de tu día a día como Software Developer.
               </p>
-              <h3>DOM</h3>
+              <h3 id="dom">DOM</h3>
               <p>
                 El Document Object Model es una estructura de árbol que
                 representará todos nuestros proyectos web como si un árbol
@@ -175,7 +175,7 @@
                 alt="Estructura de arbol de cualquier proyeto Web"
                 title="Estructura de arbol de un proyecto Web"
               />
-              <h3>Sémantica</h3>
+              <h3 id="semantica">Sémantica</h3>
               <p>
                 La semántica le brinda sentido a cada elemento existen en un
                 sitio web, algunos elementos será meramente decorativos y no
@@ -188,7 +188,7 @@
                 web, para que personas con habilidades diferentes puedan
                 entender cada contenido.
               </p>
-              <h3>Atributos</h3>
+              <h3 id="atributos">Atributos</h3>
               <p>
                 Los atributos le dan características extra a las etiquetas para
                 complementar información y son pre programadas por el navegador,
@@ -196,7 +196,7 @@
                 forma como ‘class’ pero otros atributos funcionan en solo alguna
                 etiquetas como src
               </p>
-              <h3>CSS</h3>
+              <h3 id="css">CSS</h3>
               <p>
                 Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o
                 CSS es el lenguaje de estilos utilizado para describir la
@@ -319,6 +319,7 @@
         </div>
       </div>
     </div>
+
     <footer>
       <h2>© Leonidas Esteban 2021</h2>
       <a href="#">
