--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             </section>
 
             <blockquote>
-              <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
-              <p>Leonidas Esteban</p>
+              <h3>“Este es el inicio de tu carrera como Desarrollador Web”</h3>
+              <h3>Leonidas Esteban</h3>
             </blockquote>
             <hr />
 
