Posicionando y dando los estilos a la navegacion

--- a/index.html
+++ b/index.html
@@ -87,39 +87,7 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <div class="place"></div>
-
-    <div class="header">
-      <div class="wrapper">
-        <div class="header-content">
-          <header>
-            <p>CONTENIDO</p>
-            <nav>
-              <details open>
-                <summary>Setup</summary>
-                <ol>
-                  <a href="#googleChorme"><li>Google Chrome</li></a>
-                  <a href="#vsc"><li>Visual Studio Code</li></a>
-                  <a href="#figma"><li>Figma</li></a>
-                  <a href="#gitHub"><li>GitHub</li></a>
-                </ol>
-              </details>
-              <details>
-                <summary>Conceptos esenciales del Desarrollo Web</summary>
-                <ol>
-                  <a href="#html"><li>Qué es HTML</li></a>
-                  <a href="#etiquetas"><li>Etiquetas</li></a>
-                  <a href="#dom"><li>DOM</li></a>
-                  <a href="#semantica"><li>Semántica</li></a>
-                  <a href="#atributos"><li>Atributos</li></a>
-                  <a href="#css"><li>Qué es CSS</li></a>
-                </ol>
-              </details>
-            </nav>
-          </header>
-        </div>
-      </div>
-    </div>
+    <!-- <div class="place"></div> -->
 
     <div class="main">
       <div class="wrapper">
@@ -131,6 +99,35 @@
               aprendiendo HTML y CSS para la creación de contenidos, en el nivel
               2 aprenderás de componentes y en 3 sobre layouts.
             </p>
+            <div class="header">
+              <div class="wrapper">
+                <div class="header-content">
+                  <p>CONTENIDO</p>
+                  <nav>
+                    <details open>
+                      <summary>Setup</summary>
+                      <ol>
+                        <a href="#googleChorme"><li>Google Chrome</li></a>
+                        <a href="#vsc"><li>Visual Studio Code</li></a>
+                        <a href="#figma"><li>Figma</li></a>
+                        <a href="#gitHub"><li>GitHub</li></a>
+                      </ol>
+                    </details>
+                    <details>
+                      <summary>Conceptos esenciales del Desarrollo Web</summary>
+                      <ol>
+                        <a href="#html"><li>Qué es HTML</li></a>
+                        <a href="#etiquetas"><li>Etiquetas</li></a>
+                        <a href="#dom"><li>DOM</li></a>
+                        <a href="#semantica"><li>Semántica</li></a>
+                        <a href="#atributos"><li>Atributos</li></a>
+                        <a href="#css"><li>Qué es CSS</li></a>
+                      </ol>
+                    </details>
+                  </nav>
+                </div>
+              </div>
+            </div>
             <hr />
             <section class="section setup">
               <h2>Setup</h2>
