Medium-3 terminado mas responsive design

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <a href="#gitHub"><li>GitHub</li></a>
                       </ol>
                     </details>
-                    <details>
+                    <details open>
                       <summary>Conceptos esenciales del Desarrollo Web</summary>
                       <ol>
                         <a href="#html"><li>Qué es HTML</li></a>
@@ -129,7 +129,7 @@
               </div>
             </div>
             <hr />
-            <section class="section setup">
+            <section class="section">
               <h2>Setup</h2>
               <img
                 src="./images/googleChrome.png"
