--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
               <details open>
                 <summary>Setup</summary>
                 <ol>
-                  <a href="#googleChorme"><li>Google Chrome</li></a>
-                  <a href="#vsc"><li>Visual Studio Code</li></a>
-                  <a href="#figma"><li>Figma</li></a>
-                  <a href="#gitHub"><li>GitHub</li></a>
+                  <li><a href="#googleChorme">Google Chrome</a></li>
+                  <li><a href="#vsc">Visual Studio Code</a></li>
+                  <li><a href="#figma">Figma</a></li>
+                  <li><a href="#gitHub">GitHub</a></li>
                 </ol>
               </details>
               <details>
                 <summary>Conceptos esenciales del Desarrollo Web</summary>
                 <ol>
-                  <a href="#html"><li>Qué es HTML</li></a>
-                  <a href="#etiquetas"><li>Etiquetas</li></a>
-                  <a href="#dom"><li>DOM</li></a>
-                  <a href="#semantica"><li>Semántica</li></a>
-                  <a href="#atributos"><li>Atributos</li></a>
-                  <a href="#css"><li>Qué es CSS</li></a>
+                  <li><a href="#html">Qué es HTML</a></li>
+                  <li><a href="#etiquetas">Etiquetas</a></li>
+                  <li><a href="#dom">DOM</a></li>
+                  <li><a href="#semantica">Semántica</a></li>
+                  <li><a href="#atributos">Atributos</a></li>
+                  <li><a href="#css">Qué es CSS</a></li>
                 </ol>
               </details>
             </nav>
@@ -142,9 +142,9 @@
               />
               <h3>Google Chrome</h3>
               <p>
-                Chrome va a ser el navegador que utilizaremos en el curso por su
-                extenso soporte de nuevos estándares y herramientas de
-                desarrollo avanzadas y de amigable uso.
+                Chrome va a ser <span>el navegador que utilizaremos</span> en el
+                curso por su extenso soporte de nuevos estándares y herramientas
+                de desarrollo avanzadas y de amigable uso.
               </p>
               <img
                 src="./images/vsCode.png"
@@ -155,10 +155,10 @@
               <h3>Visual Studio Code</h3>
               <p>
                 Visual Studio Code es el editor de texto más popular y potente
-                del mercado actualmente, su fácil uso y la capacidad de
-                extenderlo por medio de plugins lo hace el complemento perfecto
-                para cualquier programador sin importar el lenguaje en el que se
-                desemvuelva.
+                del mercado actualmente, su <span>fácil uso</span> y la
+                capacidad de extenderlo por medio de plugins lo hace el
+                complemento perfecto para cualquier programador sin importar el
+                lenguaje en el que se desemvuelva.
               </p>
               <img
                 src="./images/figma.png"
