--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
     <title>Blog de Ron</title>
@@ -155,10 +156,10 @@
               <h3>Visual Studio Code</h3>
               <p>
                 Visual Studio Code es el editor de texto más popular y potente
-                del mercado actualmente, su <span>fácil uso</span> y la
-                capacidad de extenderlo por medio de plugins lo hace el
-                complemento perfecto para cualquier programador sin importar el
-                lenguaje en el que se desemvuelva.
+                del mercado actualmente, su fácil uso y la capacidad de
+                extenderlo por medio de plugins lo hace el complemento perfecto
+                para cualquier programador sin importar el lenguaje en el que se
+                desemvuelva.
               </p>
               <img
                 src="./images/figma.png"
@@ -170,8 +171,8 @@
               <p>
                 Figma es una la herramienta más popular en la actualidad para
                 entregar diseños a los desarrolladores para su implementación
-                por su fácil uso porque puede ser usado directamente desde el
-                navegador.
+                por su <span>fácil uso</span> porque puede ser usado
+                directamente desde el navegador.
               </p>
               <img
                 src="./images/gitHub.png"
