--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Nunito:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>Blog de Ron</title>
@@ -87,7 +88,7 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <div class="place"></div>
+    <!-- <div class="place"></div> -->
 
     <div class="header">
       <div class="wrapper">
@@ -142,7 +143,8 @@
               />
               <h3>Google Chrome</h3>
               <p>
-                Chrome va a ser el navegador que utilizaremos en el curso por su
+                Chrome va a ser
+                <span>el navegador que utilizaremos en el curso </span>por su
                 extenso soporte de nuevos estándares y herramientas de
                 desarrollo avanzadas y de amigable uso.
               </p>
@@ -154,11 +156,11 @@
               />
               <h3>Visual Studio Code</h3>
               <p>
-                Visual Studio Code es el editor de texto más popular y potente
-                del mercado actualmente, su fácil uso y la capacidad de
-                extenderlo por medio de plugins lo hace el complemento perfecto
-                para cualquier programador sin importar el lenguaje en el que se
-                desemvuelva.
+                Visual Studio Code es el
+                <span>editor de texto más popular y potente del mercado</span>
+                actualmente, su fácil uso y la capacidad de extenderlo por medio
+                de plugins lo hace el complemento perfecto para cualquier
+                programador sin importar el lenguaje en el que se desemvuelva.
               </p>
               <img
                 src="./images/figma.png"
@@ -170,8 +172,8 @@
               <p>
                 Figma es una la herramienta más popular en la actualidad para
                 entregar diseños a los desarrolladores para su implementación
-                por su fácil uso porque puede ser usado directamente desde el
-                navegador.
+                por su <span>fácil uso</span> porque puede ser usado
+                directamente desde el navegador.
               </p>
               <img
                 src="./images/gitHub.png"
@@ -196,7 +198,7 @@
             </blockquote>
             <hr />
 
-            <section class="section conceptos">
+            <section class="no-Num conceptos">
               <h2>Conceptos esenciales del Desarrollo Web</h2>
               <h3 id="html">Qué es HTML</h3>
               <p>
@@ -378,7 +380,7 @@
 
             <p>
               Si tienes alguna duda puedes escribirme a
-              <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
+              <a href="mailto:ron.men.767@gmail.com">me@leonidasesteban.com</a>
             </p>
 
             <section class="form">
@@ -395,7 +397,7 @@
     </div>
 
     <footer>
-      <h2>© Leonidas Esteban 2021</h2>
+      <h3>© Leonidas Esteban 2021</h3>
       <a href="#">
         <img
           src="./images/instagram.png"
