--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <!-- <div class="place"></div> -->
-
     <div class="header">
       <div class="wrapper">
         <div class="header-content">
@@ -99,21 +97,21 @@
               <details open>
                 <summary>Setup</summary>
                 <ol>
-                  <a href="#googleChorme"><li>Google Chrome</li></a>
-                  <a href="#vsc"><li>Visual Studio Code</li></a>
-                  <a href="#figma"><li>Figma</li></a>
-                  <a href="#gitHub"><li>GitHub</li></a>
+                  <li><a href="#googleChorme"> Chrome </a></li>
+                  <li><a href="#vsc">Visual Studio Code</a></li>
+                  <li><a href="#figma">Figma</a></li>
+                  <li><a href="#gitHub">GitHub</a></li>
                 </ol>
               </details>
               <details>
                 <summary>Conceptos esenciales del Desarrollo Web</summary>
                 <ol>
-                  <a href="#html"><li>Qué es HTML</li></a>
-                  <a href="#etiquetas"><li>Etiquetas</li></a>
-                  <a href="#dom"><li>DOM</li></a>
-                  <a href="#semantica"><li>Semántica</li></a>
-                  <a href="#atributos"><li>Atributos</li></a>
-                  <a href="#css"><li>Qué es CSS</li></a>
+                  <li><a href="#html">Qué es HTML</a></li>
+                  <li><a href="#etiquetas">Etiquetas</a></li>
+                  <li><a href="#dom">DOM</a></li>
+                  <li><a href="#semantica">Semántica</a></li>
+                  <li><a href="#atributos">Atributos</a></li>
+                  <li><a href="#css">Qué es CSS</a></li>
                 </ol>
               </details>
             </nav>
