--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
               />
               <h3>Google Chrome</h3>
               <p>
-                Chrome va a ser el navegador que utilizaremos en el curso por su
+                Chrome va a ser
+                <span>el navegador que utilizaremos en el curso </span>por su
                 extenso soporte de nuevos estándares y herramientas de
                 desarrollo avanzadas y de amigable uso.
               </p>
@@ -154,11 +155,13 @@
               />
               <h3>Visual Studio Code</h3>
               <p>
-                Visual Studio Code es el editor de texto más popular y potente
-                del mercado actualmente, su fácil uso y la capacidad de
-                extenderlo por medio de plugins lo hace el complemento perfecto
-                para cualquier programador sin importar el lenguaje en el que se
-                desemvuelva.
+                Visual Studio Code es el
+                <span
+                  >editor de texto más popular y potente del mercado
+                  actualmente</span
+                >, su fácil uso y la capacidad de extenderlo por medio de
+                plugins lo hace el complemento perfecto para cualquier
+                programador sin importar el lenguaje en el que se desemvuelva.
               </p>
               <img
                 src="./images/figma.png"
@@ -170,8 +173,8 @@
               <p>
                 Figma es una la herramienta más popular en la actualidad para
                 entregar diseños a los desarrolladores para su implementación
-                por su fácil uso porque puede ser usado directamente desde el
-                navegador.
+                por su <span>fácil uso</span> porque puede ser usado
+                directamente desde el navegador.
               </p>
               <img
                 src="./images/gitHub.png"
@@ -181,11 +184,11 @@
               />
               <h3>GitHub</h3>
               <p>
-                Así como en Facebook te encuentran tus amigos, en Github te
-                encuentran otras programadoras y programadores de todo el mundo,
-                en vez de subir fotos de tus viajes aquí subes tu código y
-                puedes elegir hacerlo “open source” o guardarlo de manera
-                privada, Github será esencial para almacenar tu futuro
+                Así como en Facebook te encuentran tus amigos, en Github
+                <span>te encuentran otras programadoras y programadores</span>
+                de todo el mundo, en vez de subir fotos de tus viajes aquí subes
+                tu código y puedes elegir hacerlo “open source” o guardarlo de
+                manera privada, Github será esencial para almacenar tu futuro
                 portafolio.
               </p>
             </section>
@@ -378,7 +381,7 @@
 
             <p>
               Si tienes alguna duda puedes escribirme a
-              <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
+              <a href="mailto:me@leonidasesteban.com">me@leonidasesteban.com</a>
             </p>
 
             <section class="form">
