--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             />
             <h3>Google Chrome</h3>
             <p>
-              Chrome va a ser el navegador que utilizaremos en el curso por su
+              Chrome va a ser <span>el navegador que utilizaremos en el curso</span> por su
               extenso soporte de nuevos estándares y herramientas de desarrollo
               avanzadas y de amigable uso.
             </p>
@@ -166,8 +166,7 @@
             />
             <h3>Visual Studio Code</h3>
             <p>
-              Visual Studio Code es el editor de texto más popular y potente del
-              mercado actualmente, su fácil uso y la capacidad de extenderlo por
+              Visual Studio Code es el <span>editor de texto más popular y potente del mercado</span> actualmente, su fácil uso y la capacidad de extenderlo por
               medio de plugins lo hace el complemento perfecto para cualquier
               programador sin importar el lenguaje en el que se desemvuelva.
             </p>
@@ -181,7 +180,7 @@
             <p>
               Figma es una la herramienta más popular en la actualidad para
               entregar diseños a los desarrolladores para su implementación por
-              su fácil uso porque puede ser usado directamente desde el
+              su <span>fácil uso</span> porque puede ser usado directamente desde el
               navegador.
             </p>
             <img
@@ -335,42 +334,42 @@
               </li>
             </ul>
           </section>
-          <section class="seccion">
-            <h2>Intro de nuestro canal</h2>
+          <section>
+            <h3 id="emergencia">Modelo de caja</h3>
             <div class="slider">
               <scroll-contaiter class="slider-container">
                 <scroll-page class="slider-slide" id="video-1">
                   <iframe
-                    class="video"
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/fdwZTif0nQE"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
+                      class="video"
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
                 </scroll-page>
                 <scroll-page class="slider-slide" id="video-2">
                   <iframe
-                    class="video"
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/fdwZTif0nQE"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
+                      class="video"
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
                 </scroll-page>
                 <scroll-page class="slider-slide" id="video-3">
                   <iframe
-                    class="video"
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/fdwZTif0nQE"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
+                      class="video"
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/5f5Ig_U2Bpk"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
                 </scroll-page>
               </scroll-contaiter>
               <div class="slider-bullet-list">
@@ -382,11 +381,11 @@
           </section>
           <p>
             Si tienes alguna duda puedes escribirme a
-            <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
+            <a href="mailto:me@leonidasesteban.com">me@leonidasesteban.com</a>
           </p>
-          <section class="seccion">
+          <section class="form">
             <h2>Suscríbete a nuestro newsletter</h2>
-            <form action="#" class="form">
+            <form action="#">
               <input type="text" required placeholder="Nombre" />
               <input type="email" required placeholder="Correco electrónico" />
               <input type="submit" value="Suscribirme" />
