--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
       <div class="wrapper">
         <div class="header-content">
           <header>
+            <div class="variantes">
+              <p>VARIANTES DEL PROYECTO</p>
+              <a href="">Nemium A </a>
+              <a href="">Nemium B </a>
+              <a href="">Nemium C </a>
+              <a href="">Nemium D </a>
+              <a href="">Nemium E </a>
+            </div>
+            <p>CONTENIDO</p>
             <nav>
               <p>CONTENIDO</p>
               <details open>
