--- a/index.html
+++ b/index.html
@@ -89,8 +89,6 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <!-- <div class="place"></div> -->
-
     <div class="main">
       <div class="wrapper">
         <div class="main-content">
@@ -104,6 +102,14 @@
             <div class="header">
               <div class="wrapper">
                 <div class="header-content">
+                  <div class="variantes">
+                    <p>VARIANTES DEL PROYECTO</p>
+                    <a href="">Nemium A </a>
+                    <a href="">Nemium B </a>
+                    <a href="">Nemium C </a>
+                    <a href="">Nemium D </a>
+                    <a href="">Nemium E </a>
+                  </div>
                   <p>CONTENIDO</p>
                   <nav>
                     <details open>
