Fuente Roboto agregado a la navegacion de variantes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>Blog de Ron</title>
@@ -387,7 +388,7 @@
 
             <p>
               Si tienes alguna duda puedes escribirme a
-              <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
+              <a href="mailto:me@leonidasesteban.com">me@leonidasesteban.com</a>
             </p>
 
             <section class="form">
