Header terminado mas resposive

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
               <a href="">Nemium D </a>
               <a href="">Nemium E </a>
             </div>
-            <p>CONTENIDO</p>
             <nav>
+              <p>CONTENIDO</p>
               <details open>
                 <summary>Setup</summary>
                 <ol>
@@ -112,7 +112,7 @@
                   <a href="#gitHub"><li>GitHub</li></a>
                 </ol>
               </details>
-              <details>
+              <details open>
                 <summary>Conceptos esenciales del Desarrollo Web</summary>
                 <ol>
                   <a href="#html"><li>Qué es HTML</li></a>
