Revision de main y footer correcciones hechas

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             </section>
 
             <blockquote>
-              <h3>“Este es el inicio de tu carrera como Desarrollador Web”</h3>
-              <h3>Leonidas Esteban</h3>
+              <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
+              <p>Leonidas Esteban</p>
             </blockquote>
             <hr />
 
@@ -339,10 +339,10 @@
                   padding-block-end | padding-inline-start | padding-inline-end
                 </li>
               </ul>
-              <h3>Modelo de caja</h3>
             </section>
 
             <section>
+              <h2 id="h2-Slider">Modelo de caja</h2>
               <div class="slider">
                 <scroll-container class="slider-container">
                   <scroll-page class="slider-slide" id="video-1">
