Icons de summary  y el padding de ol

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <main class="main">
       <div class="wrapper">
         <div class="main-content">
-          <h1>Curso esencial de HTML y CSS</h1>
+          <h1 class="h1">Curso esencial de HTML y CSS</h1>
           <p>
             Este es el inicio de tu carrera como Desarrollador Web, empezarás
             aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2
@@ -150,14 +150,14 @@
           </p>
           <hr />
           <section class="seccion setup">
-            <h2>Setup</h2>
+            <h1>Setup</h1>
             <img
               src="./images/googleChrome.svg"
               alt="Logo del navegador Web Google Chromes"
               title="Logo de Google Chrome"
               id="googleChorme"
             />
-            <h3>Google Chrome</h3>
+            <h2>Google Chrome</h2>
             <p>
               Chrome va a ser <span>el navegador que utilizaremos en el curso</span> por su
               extenso soporte de nuevos estándares y herramientas de desarrollo
@@ -169,7 +169,7 @@
               title="Logo de Visual Studio Code"
               id="vsc"
             />
-            <h3>Visual Studio Code</h3>
+            <h2>Visual Studio Code</h2>
             <p>
               Visual Studio Code es el <span>editor de texto más popular y potente del mercado</span> actualmente, su fácil uso y la capacidad de extenderlo por
               medio de plugins lo hace el complemento perfecto para cualquier
@@ -181,7 +181,7 @@
               title="Logo de Figma"
               id="figma"
             />
-            <h3>Figma</h3>
+            <h2>Figma</h2>
             <p>
               Figma es una la herramienta más popular en la actualidad para
               entregar diseños a los desarrolladores para su implementación por
@@ -194,7 +194,7 @@
               title="Logo de GitHub"
               id="gitHub"
             />
-            <h3>GitHub</h3>
+            <h2>GitHub</h2>
             <p>
               Así como en Facebook te encuentran tus amigos, en Github te
               encuentran otras programadoras y programadores de todo el mundo,
@@ -209,8 +209,8 @@
           </blockquote>
           <hr />
           <section class="seccion conceptos">
-            <h2>Conceptos esenciales del Desarrollo Web</h2>
-            <h3 id="html">Qué es HTML</h3>
+            <h1>Conceptos esenciales del Desarrollo Web</h1>
+            <h2 id="html">HTML</h2>
             <p>
               Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el
               componente más básico de la web. Define el significado y la
@@ -232,7 +232,7 @@
     /html&gt;
     </pre
             >
-            <h3 id="etiquetas">Etiquetas</h3>
+            <h2 id="etiquetas">Etiquetas</h2>
             <p>
               Las etiquetas HTML van a ayudarnos a brindar una estructura y
               semántica al contenido de nuestro website y cada una tiene
@@ -247,7 +247,7 @@
               en este curso vamos a usar las más importantes y que serán parte
               de tu día a día como Software Developer.
             </p>
-            <h3 id="dom">DOM</h3>
+            <h2 id="dom">DOM</h2>
             <p>
               El Document Object Model es una estructura de árbol que
               representará todos nuestros proyectos web como si un árbol
@@ -260,7 +260,7 @@
               alt="Estructura de arbol de cualquier proyeto Web"
               title="Estructura de arbol de un proyecto Web"
             />
-            <h3 id="semantica">Sémantica</h3>
+            <h2 id="semantica">Sémantica</h2>
             <p>
               La semántica le brinda sentido a cada elemento existen en un sitio
               web, algunos elementos será meramente decorativos y no deben
@@ -273,7 +273,7 @@
               para que personas con habilidades diferentes puedan entender cada
               contenido.
             </p>
-            <h3 id="atributos">Atributos</h3>
+            <h2 id="atributos">Atributos</h2>
             <p>
               Los atributos le dan características extra a las etiquetas para
               complementar información y son pre programadas por el navegador,
@@ -281,7 +281,7 @@
               forma como ‘class’ pero otros atributos funcionan en solo alguna
               etiquetas como src
             </p>
-            <h3 id="css">CSS</h3>
+            <h2 id="css">CSS</h2>
             <p>
               Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o
               CSS es el lenguaje de estilos utilizado para describir la
@@ -295,8 +295,8 @@
           </section>
 
           <section class="seccion modeloDeCaja">
-            <h2>Modelo de caja</h2>
-            <h3>El modelo de caja está compuesto por:</h3>
+            <h1>Modelo de caja</h1>
+            <h2>El modelo de caja está compuesto por:</h2>
             <p>
               Chrome va a ser el navegador que utilizaremos en el curso por su
               extenso soporte de nuevos estándares y herramientas de desarrollo
@@ -308,7 +308,7 @@
               <li>Border / Bordes</li>
               <li>Margin / Márgenes</li>
             </ol>
-            <h3>Propiedades físicas para el modelo de caja:</h3>
+            <h2>Propiedades físicas para el modelo de caja:</h2>
             <ul>
               <li>width / height</li>
               <li>
@@ -322,7 +322,7 @@
                 padding-left
               </li>
             </ul>
-            <h3>Propiedades lógicas para el modelo de caja:</h3>
+            <h2>Propiedades lógicas para el modelo de caja:</h2>
             <ul>
               <li>inline-size / block-size</li>
               <li>
@@ -340,7 +340,7 @@
             </ul>
           </section>
           <section>
-            <h3 id="emergencia">Modelo de caja</h3>
+            <h2>Modelo de caja</h2>
             <div class="slider">
               <scroll-contaiter class="slider-container">
                 <scroll-page class="slider-slide" id="video-1">
