--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <main class="main">
       <div class="wrapper">
         <div class="main-content">
-          <h1 class="h1">Curso esencial de HTML y CSS</h1>
+          <h1>Curso esencial de HTML y CSS</h1>
           <p>
             Este es el inicio de tu carrera como Desarrollador Web, empezarás
             aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2
