Etiqueta h2 terminado + responsive

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               alt="Estructura de arbol de cualquier proyeto Web"
               title="Estructura de arbol de un proyecto Web"
             />
-            <h2 id="semantica">Sémantica</h2>
+            <h2 id="semantica">Semántica</h2>
             <p>
               La semántica le brinda sentido a cada elemento existen en un sitio
               web, algunos elementos será meramente decorativos y no deben
@@ -340,8 +340,8 @@
             </ul>
           </section>
           <section>
-            <h2>Modelo de caja</h2>
             <div class="slider">
+              <h2>Modelo de caja</h2>
               <scroll-contaiter class="slider-container">
                 <scroll-page class="slider-slide" id="video-1">
                   <iframe
