--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <title>Blog de Ron</title>
@@ -130,14 +132,14 @@
             </div>
             <hr />
             <section class="section">
-              <h2>Setup</h2>
+              <h1>Setup</h1>
               <img
                 src="./images/googleChrome.png"
                 alt="Logo del navegador Web Google Chromes"
                 title="Logo de Google Chrome"
                 id="googleChorme"
               />
-              <h3>Google Chrome</h3>
+              <h2>Google Chrome</h2>
               <p>
                 Chrome va a ser el navegador que utilizaremos en el curso por su
                 extenso soporte de nuevos estándares y herramientas de
@@ -149,7 +151,7 @@
                 title="Logo de Visual Studio Code"
                 id="vsc"
               />
-              <h3>Visual Studio Code</h3>
+              <h2>Visual Studio Code</h2>
               <p>
                 Visual Studio Code es el editor de texto más popular y potente
                 del mercado actualmente, su fácil uso y la capacidad de
@@ -163,7 +165,7 @@
                 title="Logo de Figma"
                 id="figma"
               />
-              <h3>Figma</h3>
+              <h2>Figma</h2>
               <p>
                 Figma es una la herramienta más popular en la actualidad para
                 entregar diseños a los desarrolladores para su implementación
@@ -176,7 +178,7 @@
                 title="Logo de GitHub"
                 id="gitHub"
               />
-              <h3>GitHub</h3>
+              <h2>GitHub</h2>
               <p>
                 Así como en Facebook te encuentran tus amigos, en Github te
                 encuentran otras programadoras y programadores de todo el mundo,
@@ -188,14 +190,14 @@
             </section>
 
             <blockquote>
-              <h3>“Este es el inicio de tu carrera como Desarrollador Web”</h3>
-              <h3>Leonidas Esteban</h3>
+              <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
+              <p>Leonidas Esteban</p>
             </blockquote>
             <hr />
 
             <section class="section conceptos">
-              <h2>Conceptos esenciales del Desarrollo Web</h2>
-              <h3 id="html">Qué es HTML</h3>
+              <h1>Conceptos esenciales del Desarrollo Web</h1>
+              <h2 id="html">HTML</h2>
               <p>
                 Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es
                 el componente más básico de la web. Define el significado y la
@@ -217,7 +219,7 @@
 &lt;/html&gt;
 </pre
               >
-              <h3 id="etiquetas">Etiquetas</h3>
+              <h2 id="etiquetas">Etiquetas</h2>
               <p>
                 Las etiquetas HTML van a ayudarnos a brindar una estructura y
                 semántica al contenido de nuestro website y cada una tiene
@@ -232,7 +234,7 @@
                 uso pero en este curso vamos a usar las más importantes y que
                 serán parte de tu día a día como Software Developer.
               </p>
-              <h3 id="dom">DOM</h3>
+              <h2 id="dom">DOM</h2>
               <p>
                 El Document Object Model es una estructura de árbol que
                 representará todos nuestros proyectos web como si un árbol
@@ -246,7 +248,7 @@
                 alt="Estructura de arbol de cualquier proyeto Web"
                 title="Estructura de arbol de un proyecto Web"
               />
-              <h3 id="semantica">Sémantica</h3>
+              <h2 id="semantica">Sémantica</h2>
               <p>
                 La semántica le brinda sentido a cada elemento existen en un
                 sitio web, algunos elementos será meramente decorativos y no
@@ -259,7 +261,7 @@
                 web, para que personas con habilidades diferentes puedan
                 entender cada contenido.
               </p>
-              <h3 id="atributos">Atributos</h3>
+              <h2 id="atributos">Atributos</h2>
               <p>
                 Los atributos le dan características extra a las etiquetas para
                 complementar información y son pre programadas por el navegador,
@@ -267,7 +269,7 @@
                 forma como ‘class’ pero otros atributos funcionan en solo alguna
                 etiquetas como src
               </p>
-              <h3 id="css">CSS</h3>
+              <h2 id="css">CSS</h2>
               <p>
                 Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o
                 CSS es el lenguaje de estilos utilizado para describir la
@@ -280,8 +282,8 @@
               />
             </section>
             <section class="no-Num">
-              <h2>Modelo de caja</h2>
-              <h3>El modelo de caja está compuesto por:</h3>
+              <h1>Modelo de caja</h1>
+              <h2>El modelo de caja está compuesto por:</h2>
               <p>
                 Chrome va a ser el navegador que utilizaremos en el curso por su
                 extenso soporte de nuevos estándares y herramientas de
@@ -293,7 +295,7 @@
                 <li>Border / Bordes</li>
                 <li>Margin / Márgenes</li>
               </ol>
-              <h3>Propiedades físicas para el modelo de caja:</h3>
+              <h2>Propiedades físicas para el modelo de caja:</h2>
               <ul>
                 <li>width / height</li>
                 <li>
@@ -309,7 +311,7 @@
                   padding-left
                 </li>
               </ul>
-              <h3>Propiedades lógicas para el modelo de caja:</h3>
+              <h2>Propiedades lógicas para el modelo de caja:</h2>
               <ul>
                 <li>inline-size / block-size</li>
                 <li>
@@ -325,11 +327,11 @@
                   padding-block-end | padding-inline-start | padding-inline-end
                 </li>
               </ul>
-              <h3>Modelo de caja</h3>
             </section>
 
             <section>
               <div class="slider">
+                <h2>Modelo de caja</h2>
                 <scroll-container class="slider-container">
                   <scroll-page class="slider-slide" id="video-1">
                     <iframe
@@ -375,11 +377,11 @@
 
             <p>
               Si tienes alguna duda puedes escribirme a
-              <a href="mailto:ron.men.767@gmail.com">ron.men.767@gmail.com</a>
+              <a href="me@leonidasesteban.com">me@leonidasesteban.com</a>
             </p>
 
             <section class="form">
-              <h3>Suscríbete a nuestro newsletter</h3>
+              <h2>Suscríbete a nuestro newsletter</h2>
               <form action="#">
                 <input type="text" placeholder="Nombre" required />
                 <input type="email" placeholder="Correo electrónico" required />
