--- a/index.html
+++ b/index.html
@@ -104,23 +104,25 @@
             <nav>
               <p>CONTENIDO</p>
               <details open>
-                <summary>Setup</summary>
+                <summary><p>Setup</p></summary>
                 <ol>
-                  <a href="#googleChorme"><li>Google Chrome</li></a>
-                  <a href="#vsc"><li>Visual Studio Code</li></a>
-                  <a href="#figma"><li>Figma</li></a>
-                  <a href="#gitHub"><li>GitHub</li></a>
+                  <li><a href="#googleChorme">Google Chrome</a></li>
+                  <li><a href="#vsc">Visual Studio Code</a></li>
+                  <li><a href="#figma">Figma</a></li>
+                  <li><a href="#gitHub">GitHub</a></li>
                 </ol>
               </details>
               <details open>
-                <summary>Conceptos esenciales del Desarrollo Web</summary>
+                <summary>
+                  <p>Conceptos esenciales del Del desarrollo WEB</p>
+                </summary>
                 <ol>
-                  <a href="#html"><li>Qué es HTML</li></a>
-                  <a href="#etiquetas"><li>Etiquetas</li></a>
-                  <a href="#dom"><li>DOM</li></a>
-                  <a href="#semantica"><li>Semántica</li></a>
-                  <a href="#atributos"><li>Atributos</li></a>
-                  <a href="#css"><li>Qué es CSS</li></a>
+                  <li><a href="#html">Qué es HTML</a></li>
+                  <li><a href="#etiquetas">Etiquetas</a></li>
+                  <li><a href="#dom">DOM</a></li>
+                  <li><a href="#semantica">Semántica</a></li>
+                  <li><a href="#atributos">Atributos</a></li>
+                  <li><a href="#css">Qué es CSS</a></li>
                 </ol>
               </details>
             </nav>
