--- a/index.html
+++ b/index.html
@@ -100,44 +100,44 @@
               2 aprenderás de componentes y en 3 sobre layouts.
             </p>
             <div class="header">
-              <div class="wrapper">
-                <div class="header-content">
-                  <div class="variantes">
-                    <p>VARIANTES DEL PROYECTO</p>
-                    <a href="">Nemium A </a>
-                    <a href="">Nemium B </a>
-                    <a href="">Nemium C </a>
-                    <a href="">Nemium D </a>
-                    <a href="">Nemium E </a>
-                  </div>
-                  <p>CONTENIDO</p>
-                  <nav>
-                    <details open>
-                      <summary>Setup</summary>
-                      <ol>
-                        <a href="#googleChorme"><li>Google Chrome</li></a>
-                        <a href="#vsc"><li>Visual Studio Code</li></a>
-                        <a href="#figma"><li>Figma</li></a>
-                        <a href="#gitHub"><li>GitHub</li></a>
-                      </ol>
-                    </details>
-                    <details open>
-                      <summary>Conceptos esenciales del Desarrollo Web</summary>
-                      <ol>
-                        <a href="#html"><li>Qué es HTML</li></a>
-                        <a href="#etiquetas"><li>Etiquetas</li></a>
-                        <a href="#dom"><li>DOM</li></a>
-                        <a href="#semantica"><li>Semántica</li></a>
-                        <a href="#atributos"><li>Atributos</li></a>
-                        <a href="#css"><li>Qué es CSS</li></a>
-                      </ol>
-                    </details>
-                  </nav>
+              <!-- <div class="wrapper"> -->
+              <div class="header-content">
+                <div class="variantes">
+                  <p>VARIANTES DEL PROYECTO</p>
+                  <a href="">Nemium A </a>
+                  <a href="">Nemium B </a>
+                  <a href="">Nemium C </a>
+                  <a href="">Nemium D </a>
+                  <a href="">Nemium E </a>
                 </div>
+                <p>CONTENIDO</p>
+                <nav>
+                  <details open>
+                    <summary>Setup</summary>
+                    <ol>
+                      <li><a href="#googleChorme">Google Chrome</a></li>
+                      <li><a href="#vsc">Visual Studio Code</a></li>
+                      <li><a href="#figma">Figma</a></li>
+                      <li><a href="#gitHub">GitHub</a></li>
+                    </ol>
+                  </details>
+                  <details open>
+                    <summary>Conceptos esenciales del Desarrollo Web</summary>
+                    <ol>
+                      <li><a href="#html">Qué es HTML</a></li>
+                      <li><a href="#etiquetas">Etiquetas</a></li>
+                      <li><a href="#dom">DOM</a></li>
+                      <li><a href="#semantica">Semántica</a></li>
+                      <li><a href="#atributos">Atributos</a></li>
+                      <li><a href="#css">Qué es CSS</a></li>
+                    </ol>
+                  </details>
+                </nav>
+                <!-- </div> -->
               </div>
             </div>
             <hr />
-            <section class="section">
+            <section class="section setup">
               <h1>Setup</h1>
               <img
                 src="./images/googleChrome.png"
@@ -287,7 +287,7 @@
                 title="Logo y estructura de una hona de estilos de CSS"
               />
             </section>
-            <section class="no-Num">
+            <section class="section modeloDeCaja">
               <h1>Modelo de caja</h1>
               <h2>El modelo de caja está compuesto por:</h2>
               <p>
