--- a/index.html
+++ b/index.html
@@ -100,40 +100,44 @@
               2 aprenderás de componentes y en 3 sobre layouts.
             </p>
             <div class="header">
-              <!-- <div class="wrapper"> -->
-              <div class="header-content">
-                <div class="variantes">
-                  <p>VARIANTES DEL PROYECTO</p>
-                  <a href="">Nemium A </a>
-                  <a href="">Nemium B </a>
-                  <a href="">Nemium C </a>
-                  <a href="">Nemium D </a>
-                  <a href="">Nemium E </a>
+              <div class="wrapper-header">
+                <div class="header-content">
+                  <div class="variantes">
+                    <p>VARIANTES DEL PROYECTO</p>
+                    <a href="">Nemium A </a>
+                    <a href="">Nemium B </a>
+                    <a href="">Nemium C </a>
+                    <a href="">Nemium D </a>
+                    <a href="">Nemium E </a>
+                  </div>
+                  <nav class="navegation">
+                    <p>CONTENIDO</p>
+                    <div class="content-nav">
+                      <details open>
+                        <summary><p>Setup</p></summary>
+                        <ol>
+                          <li><a href="#googleChorme">Google Chrome</a></li>
+                          <li><a href="#vsc">Visual Studio Code</a></li>
+                          <li><a href="#figma">Figma</a></li>
+                          <li><a href="#gitHub">GitHub</a></li>
+                        </ol>
+                      </details>
+                      <details open>
+                        <summary>
+                          <p>Conceptos esenciales del Desarrollo Web</p>
+                        </summary>
+                        <ol>
+                          <li><a href="#html">Qué es HTML</a></li>
+                          <li><a href="#etiquetas">Etiquetas</a></li>
+                          <li><a href="#dom">DOM</a></li>
+                          <li><a href="#semantica">Semántica</a></li>
+                          <li><a href="#atributos">Atributos</a></li>
+                          <li><a href="#css">Qué es CSS</a></li>
+                        </ol>
+                      </details>
+                    </div>
+                  </nav>
                 </div>
-                <p>CONTENIDO</p>
-                <nav>
-                  <details open>
-                    <summary>Setup</summary>
-                    <ol>
-                      <li><a href="#googleChorme">Google Chrome</a></li>
-                      <li><a href="#vsc">Visual Studio Code</a></li>
-                      <li><a href="#figma">Figma</a></li>
-                      <li><a href="#gitHub">GitHub</a></li>
-                    </ol>
-                  </details>
-                  <details open>
-                    <summary>Conceptos esenciales del Desarrollo Web</summary>
-                    <ol>
-                      <li><a href="#html">Qué es HTML</a></li>
-                      <li><a href="#etiquetas">Etiquetas</a></li>
-                      <li><a href="#dom">DOM</a></li>
-                      <li><a href="#semantica">Semántica</a></li>
-                      <li><a href="#atributos">Atributos</a></li>
-                      <li><a href="#css">Qué es CSS</a></li>
-                    </ol>
-                  </details>
-                </nav>
-                <!-- </div> -->
               </div>
             </div>
             <hr />
