Etiqueta span (font-weigth:700)

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
               />
               <h2 class="counterIncrement">Google Chrome</h2>
               <p>
-                Chrome va a ser el navegador que utilizaremos en el curso por su
+                Chrome va a ser
+                <span>el navegador que utilizaremos en el curso</span> por su
                 extenso soporte de nuevos estándares y herramientas de
                 desarrollo avanzadas y de amigable uso.
               </p>
@@ -199,8 +200,8 @@
               <p>
                 Figma es una la herramienta más popular en la actualidad para
                 entregar diseños a los desarrolladores para su implementación
-                por su fácil uso porque puede ser usado directamente desde el
-                navegador.
+                por su <span>fácil uso</span> porque puede ser usado
+                directamente desde el navegador.
               </p>
               <img
                 src="./images/gitHub.png"
