estilos para pre + responsive

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               </p>
               <!-- a esto se le llama escapar el código -->
               <pre>
-!DOCTYPE html&gt;
+&lt;!DOCTYPE html&gt;
 &lt;html lang=&quot;es&quot;&gt;
 &lt;head&gt;
 &lt;meta charset=&quot;UTF-8&quot;&gt;
