Iniciando nemiumD estructura basica

--- a/variantes/nemiumD.html
+++ b/variantes/nemiumD.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,71 +17,71 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="./favicon/apple-icon-57x57.png"
+      href="../favicon/apple-icon-57x57.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="./favicon/apple-icon-60x60.png"
+      href="../favicon/apple-icon-60x60.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="./favicon/apple-icon-72x72.png"
+      href="../favicon/apple-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="./favicon/apple-icon-76x76.png"
+      href="../favicon/apple-icon-76x76.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="./favicon/apple-icon-114x114.png"
+      href="../favicon/apple-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="./favicon/apple-icon-120x120.png"
+      href="../favicon/apple-icon-120x120.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="./favicon/apple-icon-144x144.png"
+      href="../favicon/apple-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="./favicon/apple-icon-152x152.png"
+      href="../favicon/apple-icon-152x152.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./favicon/apple-icon-180x180.png"
+      href="../favicon/apple-icon-180x180.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="./favicon/android-icon-192x192.png"
+      href="../favicon/android-icon-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./favicon/favicon-32x32.png"
+      href="../favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="./favicon/favicon-96x96.png"
+      href="../favicon/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./favicon/favicon-16x16.png"
+      href="../favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="./favicon/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
@@ -89,6 +89,69 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
+    <div class="place"></div>
+
+    <div class="header">
+      <div class="wrapper-header">
+        <div class="header-content">
+          <div class="variantes">
+            <p>VARIANTES DEL PROYECTO</p>
+            <a href="">Nemium A </a>
+            <a href="">Nemium B </a>
+            <a href="../index.html">Nemium C </a>
+            <a href="">Nemium D </a>
+            <a href="">Nemium E </a>
+          </div>
+          <nav class="navegation">
+            <p>CONTENIDO</p>
+            <div class="content-nav">
+              <details open class="resetCounter">
+                <summary><p>Setup</p></summary>
+                <ol>
+                  <li class="counterIncrement">
+                    <a href="#googleChorme">Google Chrome</a>
+                  </li>
+                  <li class="counterIncrement">
+                    <a href="#vsc">Visual Studio Code</a>
+                  </li>
+                  <li class="counterIncrement">
+                    <a href="#figma">Figma</a>
+                  </li>
+                  <li class="counterIncrement">
+                    <a href="#gitHub">GitHub</a>
+                  </li>
+                </ol>
+              </details>
+              <details class="resetCounter">
+                <summary>
+                  <p>Conceptos esenciales del Desarrollo Web</p>
+                </summary>
+                <ol>
+                  <li class="counterIncrement">
+                    <a href="#html">Qué es HTML</a>
+                  </li>
+                  <li class="counterIncrement">
+                    <a href="#etiquetas">Etiquetas</a>
+                  </li>
+                  <li class="counterIncrement">
+                    <a href="#dom">DOM</a>
+                  </li>
+                  <li class="counterIncrement">
+                    <a href="#semantica">Semántica</a>
+                  </li>
+                  <li class="counterIncrement">
+                    <a href="#atributos">Atributos</a>
+                  </li>
+                  <li class="counterIncrement">
+                    <a href="#css">Qué es CSS</a>
+                  </li>
+                </ol>
+              </details>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </div>
     <div class="main">
       <div class="wrapper">
         <div class="main-content">
@@ -99,72 +162,12 @@
               aprendiendo HTML y CSS para la creación de contenidos, en el nivel
               2 aprenderás de componentes y en 3 sobre layouts.
             </p>
-            <div class="header">
-              <div class="wrapper-header">
-                <div class="header-content">
-                  <div class="variantes">
-                    <p>VARIANTES DEL PROYECTO</p>
-                    <a href="">Nemium A </a>
-                    <a href="">Nemium B </a>
-                    <a href="">Nemium C </a>
-                    <a href="./variantes/nemiumD.html">Nemium D </a>
-                    <a href="">Nemium E </a>
-                  </div>
-                  <nav class="navegation">
-                    <p>CONTENIDO</p>
-                    <div class="content-nav">
-                      <details open class="resetCounter">
-                        <summary><p>Setup</p></summary>
-                        <ol>
-                          <li class="counterIncrement">
-                            <a href="#googleChorme">Google Chrome</a>
-                          </li>
-                          <li class="counterIncrement">
-                            <a href="#vsc">Visual Studio Code</a>
-                          </li>
-                          <li class="counterIncrement">
-                            <a href="#figma">Figma</a>
-                          </li>
-                          <li class="counterIncrement">
-                            <a href="#gitHub">GitHub</a>
-                          </li>
-                        </ol>
-                      </details>
-                      <details open class="resetCounter">
-                        <summary>
-                          <p>Conceptos esenciales del Desarrollo Web</p>
-                        </summary>
-                        <ol>
-                          <li class="counterIncrement">
-                            <a href="#html">Qué es HTML</a>
-                          </li>
-                          <li class="counterIncrement">
-                            <a href="#etiquetas">Etiquetas</a>
-                          </li>
-                          <li class="counterIncrement">
-                            <a href="#dom">DOM</a>
-                          </li>
-                          <li class="counterIncrement">
-                            <a href="#semantica">Semántica</a>
-                          </li>
-                          <li class="counterIncrement">
-                            <a href="#atributos">Atributos</a>
-                          </li>
-                          <li class="counterIncrement">
-                            <a href="#css">Qué es CSS</a>
-                          </li>
-                        </ol>
-                      </details>
-                    </div>
-                  </nav>
-                </div>
-              </div>
-            </div>
+
             <hr />
             <section class="section setup">
               <h1>Setup</h1>
               <img
-                src="./images/googleChrome.png"
+                src="../images/googleChrome.png"
                 alt="Logo del navegador Web Google Chromes"
                 title="Logo de Google Chrome"
                 id="googleChorme"
@@ -177,7 +180,7 @@
                 desarrollo avanzadas y de amigable uso.
               </p>
               <img
-                src="./images/vsCode.png"
+                src="../images/vsCode.png"
                 alt="Logo de editor de código Visual Studio Code"
                 title="Logo de Visual Studio Code"
                 id="vsc"
@@ -191,7 +194,7 @@
                 desemvuelva.
               </p>
               <img
-                src="./images/figma.png"
+                src="../images/figma.png"
                 alt="Logo de Figma"
                 title="Logo de Figma"
                 id="figma"
@@ -204,7 +207,7 @@
                 directamente desde el navegador.
               </p>
               <img
-                src="./images/gitHub.png"
+                src="../images/gitHub.png"
                 alt="Logo de GitHub"
                 title="Logo de GitHub"
                 id="gitHub"
@@ -275,7 +278,7 @@
                 proyecto.
               </p>
               <img
-                src="./images/dom.png"
+                src="../images/dom.png"
                 alt="Estructura de arbol de cualquier proyeto Web"
                 title="Estructura de arbol de un proyecto Web"
               />
@@ -307,7 +310,7 @@
                 presentación de documentos HTML
               </p>
               <img
-                src="./images/css.png"
+                src="../images/css.png"
                 alt="Logo y estructura de una hona de estilos de CSS"
                 title="Logo y estructura de una hona de estilos de CSS"
               />
@@ -432,21 +435,21 @@
       <h2>© Leonidas Esteban 2021</h2>
       <a href="#">
         <img
-          src="./images/instagram.png"
+          src="../images/instagram.png"
           alt="Logo de instagram"
           title="Link a la cuenta de instagram"
         />
       </a>
       <a href="#">
         <img
-          src="./images/facebook.png"
+          src="../images/facebook.png"
           alt="Logo de facebook"
           title="Link a la cuenta de facebook"
         />
       </a>
       <a href="#">
         <img
-          src="./images/twitter.png"
+          src="../images/twitter.png"
           alt="Logo de twitter"
           title="Link a la cuenta de twitter"
         />
